Updated to implement AutoClosable